--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,16 @@
-body {
-    overflow-y: hidden;
+html {
+  height: 100%;
 }
 
-.video-wrapper {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 */
-    padding-top: 25px;
-    height: 0;
+body {
+  overflow-y: hidden;
+  height: 100%;
 }
-.video-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+
+#player {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
