--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ html {
 body {
   overflow-y: hidden;
   height: 100%;
+  color: lime;
 }
 
 #player {
@@ -13,4 +14,24 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 1;
+}
+
+#content-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  pointer-events: none;
+}
+
+#content-wrapper tr td {
+  vertical-align: middle;
+  text-align: center;
+}
+
+#content {
+  display: inline;
 }
