--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ html {
 }
 
 body {
-  overflow-y: hidden;
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
   height: 100%;
   color: white;
   background-color: black;
@@ -21,21 +23,20 @@ body {
 
 #content-wrapper {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  width: 5000px;
+  height: 5000px;
   z-index: 2;
+  transform: translate(-50%, -50%);
   pointer-events: none;
 }
 
-#content-wrapper tr td {
-  vertical-align: middle;
-  text-align: center;
-}
-
 .content {
-  display: inline;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .highlight {
