--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,10 @@ body {
   transform: translate(-50%, -50%);
 }
 
+.frame {
+  outline: 1px solid rgba(255, 255, 255, 0.2);
+}
+
 .highlight {
   color: lime;
   background-color: black;
