--- a/styles.css
+++ b/styles.css
@@ -21,33 +21,21 @@ body {
   z-index: 1;
 }
 
-.content-wrapper {
+.animation {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 5000px;
-  height: 5000px;
   z-index: 2;
   transform: translate(-50%, -50%);
   pointer-events: none;
-}
-
-.content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.frame {
   outline: 1px solid rgba(255, 255, 255, 0.2);
-}
-
-.highlight {
-  color: lime;
-  background-color: black;
 }
 
 .word {
   text-transform: uppercase;
+  font-size: 3em;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
